# mdbook-angular

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
.github/workflows/: deploy.yml  validation.yml
.husky/: pre-commit
scripts/: is-cargo
scripts/ci/: NOTICE.md  install-rust.sh  make-release-asset.sh
src/: codeblock-io.js  codeblock-io.min.js  codeblock.rs  codeblock_collector.rs  config.rs  default_template.hbs  lib.rs  main.rs  markdown.rs  worker.rs
src/angular/: background.rs  builder.rs  mod.rs  workspace.rs
src/angular/builder/: background.rs  default.rs  experimental.rs  utils.rs  writer.rs
src/angular/builder/background/: utils.rs
src/codeblock/: flags.rs  mod.rs  parser.rs  types.rs
src/codeblock/playground/: evaluate_expression.rs  mod.rs  parser.rs  types.rs
src/js/: mod.rs  playground-io.js  playground-io.min.js
src/js/experimental-builder/: builder.min.mjs  builder.mjs  schema.json
src/utils/: angular_workspace.rs  codegen.rs  mod.rs  path.rs  swc.rs
src/utils/experimental-builder/: builder.mjs  package.json  schema.json
test-book/: .gitignore  book.toml  package.json
test-book/src/: chapter_1.md  chapter_2.md  sample-2.ts
tests/: fixture.rs  option-collapsed.rs  option-no-playground.rs  without-options.rs
tests/fixture/: .gitignore  book.toml
tests/fixture/src/: SUMMARY.md  chapter-1.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  example.ts
