[package]
name = "mdbook-angular"
version = "0.2.1"
edition = "2021"
authors = ["Bram Gotink <bram@bram.dev>"]
license = "EUPL-1.2"
description = "mdbook renderer to run angular code samples"
repository = "https://github.com/bgotink/mdbook-angular"
keywords = ["mdbook", "angular"]
categories = ["text-processing"]
exclude = ["node_modules", ".husky", ".vscode", ".prettier*"]

[[bin]]
name = "mdbook-angular"
doc = false

[dependencies]
# Disable colored logging, we run through mdbook which means env_logger doesn't
# detect a TTY anyway
env_logger = { version = "0.10.0", default-features = false }
log = { version = "0.4.19", features = ["std"] }

# Disable the watch and serve features, we only use mdbook as a library
mdbook = { version = "0.4.33", default-features = false, features = ["search"] }

# Disable unicode features, we don't need them
regex = { version = "1.9.1", default-features = false, features = [
	"std",
	"perf",
] }

serde_json = "1.0.103"
serde = { version = "1.0.171", features = ["derive"] }

toml = "0.5.11"

# We use pulldown-cmark to mutate markdown, not to render HTML
pulldown-cmark = { version = "0.9.3", default-features = false }
pulldown-cmark-to-cmark = "10.0.4"

pathdiff = "0.2.1"

anyhow = "1.0.71"

once_cell = "1.18.0"

swc_core = { version = "0.79.28", features = [
	"common",
	"ecma_parser_typescript",
	"ecma_ast",
] }

chrono = { version = "0.4.26", default-features = false, features = ["clock"] }

semver = "1.0.18"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.147", optional = true }
filetime = { version = "0.2", optional = true }

[features]
default = ["background"]
background = ["dep:libc", "dep:filetime"]

[dev-dependencies]
assert_cmd = "2.0.11"
copy_dir = "0.1.3"
select = "0.6.0"
tempfile = "3.4.0"
